--- a/CSS/Login/login.css
+++ b/CSS/Login/login.css
@@ -341,9 +341,8 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: space-between;
         width: 50vw;
-        margin-top: 1rem;
+        margin-top: .1rem;
     }
     .titulo__redes-sociais {
         color: var(--primary);
@@ -351,11 +350,14 @@
         font-size: 12px;
         margin-bottom: 1.5rem;
     }
-    .links__redes-socias {
+    .links__redes-sociais {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
         width: 9rem;
+    }
+    .container__redes-sociais{
+        text-align: center;
     }
     .whatsapp{
         display: flex;
