--- a/CSS/Home/home.css
+++ b/CSS/Home/home.css
@@ -1,7 +1,11 @@
 @media (min-width:0px){
+    main{
+        background-color: #F8FBFF;
+    }
     .cabecalho{
         display: flex;
         flex-direction: row;
+        align-items: center;
         
         height: 6.938rem;
         width: 100vw;
@@ -24,7 +28,127 @@
         border-radius: .5rem;
 
         background-color: #F1F4F9;
+        background-image: url("../../Assets/search.png");
+        background-repeat: no-repeat;
+        background-position: 2.063rem, .5rem;
 
         padding: 2rem 0 2rem 3.5rem;
+        margin-left: 3.724rem;
+        margin-right: 12.103rem;
+    }
+    .barra-pesquisa:focus{
+        outline: 2px solid var(--primary-support);
+        color: var(--azul-secundaria);
+    }
+    .container__notificacao{
+        padding-right: 1.75rem;
+        margin-right: 1.75rem;
+        border-right: 1px solid #cdcdcd;
+        display: flex;
+        align-items: center;
+    }
+    .notificacao-ativa{
+        visibility: hidden;
+        position: relative;
+        top: -.8rem;
+        left: -.5rem;
+    }
+
+    .perfil-area{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        font-family: var(--mont-serrat);
+        height: 2rem;
+    }
+    .icone__perfil{
+        border-radius: 50%;
+        width: 2rem;
+        height: 2rem;
+        margin-right: .5rem;
+    }
+    .nome__perfil{
+        margin: 0%;
+        font-size: 14px;
+        font-weight: 600;
+        color: var(--primary);
+    }
+    .banco__perfil{
+        font-size: 14px;
+        font-weight: 500;
+    }
+    .aplicacoes{
+        padding: 2rem 1.5rem;
+    }
+    .intro__aplicacoes{
+        font-family: var(--mont-serrat);
+        margin-left: 1rem;
+    }
+    .saudacao__aplicacoes{
+        color: #7A8594;
+        font-size: 14px;
+        font-weight: 500;
+        margin-top: 0%;
+
+    }
+    .titulo__aplicacoes{
+        color: var(--primary);
+        font-weight: 700;
+    }
+    .secao__aplicacoes{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        margin-top: 1rem;
+    }
+
+    .card__aplicacao{
+        width: 26.688rem;
+        font-family: var(--mont-serrat);
+        border: 0.034rem solid #F9F9F9;
+        box-shadow: 0px 0.136rem 0.674rem rgba(122, 133, 148, 0.21);
+        border-radius: 0.5rem;
+        background-color: #FFFFFF;
+        margin: 1rem;
+    }
+    .card__aplicacao > p {
+        color: var(--primary);
+        font-weight: 600;
+        font-size: 1.5rem;
+        
+        padding: 2rem 0 2rem 6.5rem;
+        margin: 0%;
+        
+        display: flex;
+        flex-direction: column;
+
+        background-repeat: no-repeat;
+        background-position-y: 1.6rem;
+        background-position-x: 1.5rem;
+    }
+    .tempo-visto {
+        margin: 0%;
+        color: #7A8594;
+        font-size: 14px;
+        font-weight: 400;
+    }
+
+    .fornecedor-descarga{
+        background-image: url("../../Assets/fornecedor.png");
+    }
+    .limite-automatico{
+        background-image: url("../../Assets/limite-automatico-home.png");
+    }
+    .cobranca{
+        background-image: url("../../Assets/cobranca-home.png");
+    }
+    .com-voce{
+        background-image: url("../../Assets/com-voce.png");
+    }
+    .cobre-mais{
+        background-image: url("../../Assets/cobre-mais.png");
+    }
+    .edi-financeiro{
+        background-image: url("../../Assets/edi-financeiro-home.png");
     }
 }
