--- a/CSS/Login/loginResponsivo.css
+++ b/CSS/Login/loginResponsivo.css
@@ -122,16 +122,22 @@
     }
     .imagem-circuferencia{
         position: relative;
-        left: 0%;
+        left: -1.9vw;
     }
     .container__limite-automatico{
         left: 6.5vw;
     }
     .icone-1{
-        left: 15vw;
+        left: 13vw;
     }
     .icone-2{
-        left: 35vw;
+        left: 32vw;
+    }
+    .icone-3{
+        left: 34vw;
+    }
+    .elipse-laranja{
+        left: 28vw;
     }
     .texto__intro{
         left: 12.5vw;
