--- a/CSS/Home/home.css
+++ b/CSS/Home/home.css
@@ -125,7 +125,9 @@
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
+        gap: 2rem;
         margin-top: 1rem;
+        padding-left: 1rem;
     }
 
     .card__aplicacao{
@@ -135,7 +137,6 @@
         box-shadow: 0px 0.136rem 0.674rem rgba(122, 133, 148, 0.21);
         border-radius: 0.5rem;
         background-color: #FFFFFF;
-        margin: 1rem;
     }
     .card__aplicacao > p {
         color: var(--primary);
@@ -194,7 +195,7 @@
         background-color: #ffffff;
         border-radius: 1rem;
         border: 1px solid #f1f1f1;
-        height: 26.438rem;
+        height: 27.438rem;
 
         margin: 1.5rem 2.5rem 1.5rem 0;
 
@@ -202,6 +203,7 @@
         background-repeat: no-repeat;
         background-position: 75.25rem 64px, bottom, bottom right;
         background-size: auto, 100vw, auto;
+        overflow-x: hidden;
     }
     .tablinks{
         border: none;
@@ -249,7 +251,7 @@
         border-bottom: 1px solid #efefef;
     }
     .nome__item___perfil{
-        font-size: 14px;
+        font-size: 16px;
         color: #7A8594;
     }
     .botao-edita, .botao-deleta{
@@ -298,5 +300,20 @@
         background-image: url("../../Assets/seta-direita.png");
         padding-right: 2rem;
         background-position-x:right;
+    }
+    .container__carrousel{
+        width: auto;
+        overflow-x: hidden;
+    }
+    .carrousel{
+        display: flex;
+        flex-direction: row;
+        width: 300rem;
+        transition: all .2s ease-in;
+        overflow-x: hidden;
+    }
+
+    .carrousel__item___perfil{
+        width: 91vw;
     }
 }
