Implementando processamento dda

--- a/CSS/Home/home.css
+++ b/CSS/Home/home.css
@@ -203,10 +203,10 @@
 
         margin: 1.5rem 2.5rem 1.5rem 0;
 
-        background-image: url("../../Assets/ellipse-bg.png"), url("../../Assets/borda-bg-home.png"), url("../../Assets/vetor-bg-home.png");
+        background-image: url("../../Assets/borda-bg-home.png"), url("../../Assets/vetor-bg-home.png");
         background-repeat: no-repeat;
-        background-position: 75.25rem 64px, bottom, bottom right;
-        background-size: auto, 100vw, auto;
+        background-position: bottom, bottom right;
+        background-size: 100vw, auto;
         overflow-x: hidden;
     }
     .tablinks{
